@@ -57,6 +57,7 @@ CHANGELOG Roundcube Webmail
 - Enigma: Fix bug where last records on keys list were hidden (#5461)
 - Enigma: Fix key search with keyword containing non-ascii characters (#5459)
 - Fix bug where deleting folders with subfolders could fail in some cases (#5466)
+- Fix bug where IMAP password could be exposed via error message (#5472)
 
 RELEASE 1.2.2
 -------------
